[platform] refactoring the logging subsystem: passing attachments via `IdeaLoggingEvent` (IJPL-175997)
GitOrigin-RevId: 356753a8d2a5b9034e52e07d8183d2de9710d31f