@@ -2,21 +2,20 @@
 package com.intellij.diagnostic;
 
 import com.intellij.openapi.diagnostic.Attachment;
-import com.intellij.openapi.diagnostic.IdeaLoggingEventData;
 import com.intellij.openapi.diagnostic.SubmittedReportInfo;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
 /** Internal API. See a note in {@link MessagePool}. */
 @ApiStatus.Internal
-public abstract class AbstractMessage implements IdeaLoggingEventData {
+public abstract class AbstractMessage {
   private final Date myDate = Calendar.getInstance().getTime();
   private boolean myIsRead;
   private Runnable myOnReadCallback;
@@ -32,14 +31,11 @@ public abstract class AbstractMessage implements IdeaLoggingEventData {
   public abstract @Nullable String getMessage();
 
   /** Returns a (possibly empty) list of all attachments. */
-  public @NotNull List<Attachment> getAllAttachments() {
-    return Collections.emptyList();
+  public @NotNull @Unmodifiable List<Attachment> getAllAttachments() {
+    return List.of();
   }
 
-  /** @deprecated use {@link com.intellij.openapi.diagnostic.IdeaLoggingEvent#getIncludedAttachments} */
-  @Override
-  @Deprecated(forRemoval = true)
-  public @NotNull List<Attachment> getIncludedAttachments() {
+  public @NotNull @Unmodifiable List<Attachment> getIncludedAttachments() {
     return ContainerUtil.filter(getAllAttachments(), Attachment::isIncluded);
   }
 
